<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="app_name">BlueCam</string>
    <string name="cancel">Cancel</string>
    <string name="qr_code">Scan</string>
    <string name="master_uri_hint">http://192.168.2.121:11311/</string>
    <string name="new_master">New Master</string>

    <string name="camrx">CamReceive</string>
    <string name="camtx">CamTransmit</string>
    <string name="bluecam">BlueCam</string>
    <string name="touchraupe">TouchRaupe</string>
    <string name="panzer">PanzerSteuerung</string>
    <string name="exit">Exit</string>
    
    <string name="up">UP</string>
    <string name="left">LEFT</string>
    <string name="stop">STOP</string>
    <string name="right">RIGHT</string>
    <string name="down">DOWN</string>

    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

</resources>
