<?xml version="1.0" encoding="utf-8"?>

<!-- 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_red"
    android:orientation="vertical" >

	<Button android:id="@+id/bluecamButton" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/bluecam" />
	
	<Button android:id="@+id/touchButton" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/touchraupe" />

	<Button android:id="@+id/exitButton" android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/exit" />
	
</LinearLayout>