<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_red"
    android:orientation="vertical" >

	<LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/translucent_red"
	    android:orientation="horizontal" >

		<LinearLayout
	    	android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >

		    <ListView
		        android:id="@+id/in"
	    		android:layout_width="match_parent"
			    android:layout_height="100dp"
		        android:background="@color/background1"
		        android:stackFromBottom="true"
		        android:transcriptMode="alwaysScroll" >
		    </ListView>

		    <org.ros.android.view.RosTextView
		        android:id="@+id/chattext"
			    android:layout_width="match_parent"
			    android:layout_height="100dp"
		        android:background="@color/background2"
		        android:stackFromBottom="true"
		        android:transcriptMode="alwaysScroll"
		        android:textSize="12dip" />

		    <org.ros.android.view.RosTextView
		        android:id="@+id/raupetext"
			    android:layout_width="match_parent"
			    android:layout_height="100dp"
		        android:background="@color/background3"
		        android:stackFromBottom="true"
		        android:transcriptMode="alwaysScroll"
		        android:textSize="12dip" />

		</LinearLayout>
	    
	    <org.ros.android.view.camera.RosCameraPreviewView
	        android:id="@+id/ros_camera_preview_view"
	        android:layout_width="match_parent"
	        android:layout_height="300dp" />

	    	    
	</LinearLayout>	    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/fixedUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/fixedLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/left" />

            <Button
                android:id="@+id/fixedStop"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop" />

            <Button
                android:id="@+id/fixedRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/right" />
        </LinearLayout>

        <Button
            android:id="@+id/fixedDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/down" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:inputType="text"
            android:id="@+id/edit_text_out"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</LinearLayout>